--- a/src/scss/_components/_footer.scss
+++ b/src/scss/_components/_footer.scss
@@ -63,7 +63,6 @@
     &-2,
     &-3 {
       position: relative;
-      top: 30px;
       max-width: calc((100% - 700px) / 2);
     }
 
