--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -4,7 +4,6 @@
 .social {
   display: flex;
   flex-direction: column;
-  padding-top: 30px;
 
   &__title {
     padding-bottom: 15px;
